Final Additions & Fixes

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         document.body.className = className;
       };
     </script>
-    <title>React App</title>
+    <title>Avocado Markdown</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
